# TerminalFileExplorer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: compile-and-upload-artifact-linux.yml
lib/: Directory.h  File.h  Point.h  RasterLine.h  Terminal.h  Window.h  WindowsHandler.h
src/: Directory.cpp  File.cpp  Point.cpp  RasterLine.cpp  Terminal.cpp  Window.cpp  WindowsHandler.cpp
